src/snapshots/tuipe__ui__tests__referencia_citacao_100x28.snap
---
source: src/ui.rs
expression: rendered
---


     ⌨ tuipe


      ╭────────────────────────╮  ╭─────────────────────────────╮  ╭────────────────────────╮
      │  @ pontuação # números │  │◷ tempo Aa palavras ❝ citação│  │ todas curta média longa│
      ╰────────────────────────╯  ╰─────────────────────────────╯  ╰────────────────────────╯


                                    ◎ português · ★ especialista

     A prática constante transforma hesitação em confiança e permite que cada palavra encontre

     seu ritmo sem sacrificar a precisão durante o caminho.











                    comece a digitar    esc configurações    ctrl+s estatísticas
