src/snapshots/tuipe__ui__tests__referencia_palavras_50_100x28.snap
---
source: src/ui.rs
expression: rendered
---


     ⌨ tuipe


         ╭────────────────────────╮  ╭─────────────────────────────╮  ╭──────────────────╮
         │  @ pontuação # números │  │◷ tempo Aa palavras ❝ citação│  │  10  25  50  100 │
         ╰────────────────────────╯  ╰─────────────────────────────╯  ╰──────────────────╯


                                    ◎ português · ★ especialista

     casa tempo mundo pessoa trabalho depois cidade parte forma lugar fazer direito governo

     grande sempre vida casa tempo mundo pessoa trabalho depois cidade parte forma lugar fazer

     direito governo grande sempre vida casa tempo mundo pessoa trabalho depois cidade parte









                    comece a digitar    esc configurações    ctrl+s estatísticas
