src/snapshots/tuipe__ui__tests__referencia_tempo_30_100x28.snap
---
source: src/ui.rs
expression: rendered
---


     ⌨ tuipe


         ╭────────────────────────╮  ╭─────────────────────────────╮  ╭──────────────────╮
         │  @ pontuação # números │  │◷ tempo Aa palavras ❝ citação│  │  15  30  60  120 │
         ╰────────────────────────╯  ╰─────────────────────────────╯  ╰──────────────────╯


                                    ◎ português · ★ especialista

     casa tempo mundo pessoa trabalho depois cidade parte forma lugar fazer direito governo

     grande sempre vida casa tempo mundo pessoa trabalho depois cidade parte forma lugar fazer

     direito governo grande sempre vida casa tempo mundo pessoa trabalho depois cidade parte









                    comece a digitar    esc configurações    ctrl+s estatísticas
