src/snapshots/tuipe__ui__tests__settings_100x28.snap
---
source: src/ui.rs
expression: "render_engine_with_settings(100, 28, &engine, true)"
---



                     ╭────────────────────────────────────────────────────────╮
                     │                                                        │
                     │ ⚙ configurações do teste · ↑↓ enter                    │
                     │                                                        │
                     │  p pontuação    n números                              │
                     │  m tempo    m palavras    m citação                    │
                     │                                                        │
                     │  v 15    v 30    v 60    v 120                         │
                     │  d normal    d especialista    d mestre                │
                     │                                                        │
                     │  a adaptativo                                          │
                     │  l português    l inglês                               │
                     │                                                        │
                     │  k comum    k 1k    k 5k                               │
                     │ t tema   arch                                          │
                     │                                                        │
                     │ esc fechar    q sair                                   │
                     │                                                        │
                     │                                                        │
                     │                                                        │
                     ╰────────────────────────────────────────────────────────╯
