src/snapshots/tuipe__ui__tests__settings_50x14.snap
---
source: src/ui.rs
expression: "render_engine_with_settings(50, 14, &engine, true)"
---
╭────────────────────────────────────────────────╮
│                                                │
│ ⚙  configurações                               │
│ extras         pontuação    números            │
│ modo           tempo    palavras    citação    │
│ duração        15 s    30 s    60 s    120 s   │
│ dificuldade    normal    especialista    mestr │
│ treino         adaptativo                      │
│ idioma         português    inglês             │
│ vocabulário    comum    1k    5k               │
│ tema           arch                            │
│ esc fechar    q sair                           │
│                                                │
╰────────────────────────────────────────────────╯
