src/snapshots/tuipe__ui__tests__settings_difficulty_100x28.snap
---
source: src/ui.rs
expression: "render_engine_with_state(100, 28, &engine, TestRenderOptions\n{\n    settings_open: true, settings_focus: 4, session_kind:\n    SessionKind::Practice, persistence: PersistenceUiState::Saved,\n    focus_warning: false,\n},)"
---





       ╭────────────────────────────────────────────────────────────────────────────────────╮
       │ ⚙  configurações  ·  salvo automaticamente                                         │
       │                                                                                    │
       │ ╭ preferências ───────────────╮  ╭ dificuldade ──────────────────────────────────╮ │
       │ │  pontuação        desligada │  │ Escolha o que acontece depois de um erro.     │ │
       │ │  números         desligados │  │                                               │ │
       │ │  modo                 tempo │  │                                               │ │
       │ │  duração               30 s │  │                                               │ │
       │ │› dificuldade   especialista │  │       normal    especialista    mestre        │ │
       │ │  treino          adaptativo │  │                                               │ │
       │ │  idioma           português │  │                                               │ │
       │ │  vocabulário          comum │  │  espaço após palavra errada encerra o teste   │ │
       │ │  tema                  arch │  │                                               │ │
       │ │                             │  │   ← ou → altera  ·  enter confirma e fecha    │ │
       │ ╰─────────────────────────────╯  ╰───────────────────────────────────────────────╯ │
       │                                                                                    │
       │    ↑↓ navegar    ←→ alterar    enter confirmar e fechar    esc fechar    q sair    │
       ╰────────────────────────────────────────────────────────────────────────────────────╯
