src/snapshots/tuipe__ui__tests__statistics_100x28.snap
---
source: src/ui.rs
expression: rendered
---







                                            estatísticas

                                       testes concluídos   42
                                       wpm médio           84
                                       precisão média      96%
                                       melhor wpm          112
                                     tempo digitando     61m 01s

                                             esc voltar
