src/snapshots/tuipe__ui__tests__statistics_180x40.snap
---
source: src/ui.rs
expression: "render_statistics_at(180, 40)"
---





          estatísticas                                                                                                                                  nível 0  ·  0 dias
          ╭───────────────────────────────────────────────────╮ ╭──────────────────────────────────────────────────╮ ╭───────────────────────────────────────────────────╮
          │                  1  visão geral                  │ │                   2  progresso                  │ │                   3  histórico                   │
          ╰───────────────────────────────────────────────────╯ ╰──────────────────────────────────────────────────╯ ╰───────────────────────────────────────────────────╯

          tendência de wpm  ·  12 testes válidos
           100│
              │                                                                      ⡀             ⢀             ⢀             ⢀       ⣀⣀⣀⣀⣀⣀⣠⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣠⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣠
              │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠓⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠓⠒⠒⠒⠒⠒⠒⠊⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉
              │
            50│
              │
              │
              │
             0└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
              #1                            #3                             #5                             #7                             #9                            #12

          testes totais              testes válidos             wpm médio                  precisão                   melhor                     tempo ativo
          42                         12                         84                         96%                        112                        1h 01m

          palavras prioritárias                                                                        padrões que pedem treino

          palavra       prioridade  falhou  corrigiu  apagou                                           padrão                prioridade  falhou  corrigiu  palavras
          ›através             +18%    3/12     2/12      5                                            técnica acento agudo        +12%   3/14     2/14  5 palavras




          ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
          ↑↓ selecionar   enter detalhes   R zerar modelo   esc voltar
