src/snapshots/tuipe__ui__tests__statistics_50x14.snap
---
source: src/ui.rs
expression: "render_statistics_at(50, 14)"
---
  ╭─────────────╮ ╭────────────╮ ╭─────────────╮
  │   1 visão  │ │ 2 progress│ │ 3 histórico│
  ╰─────────────╯ ╰────────────╯ ╰─────────────╯
  estatísticas
  42 testes totais  ·  12 testes iguais
  84 wpm  ·  96% precisão  ·  melhor 112
  12 testes válidos  ·  74 → 80 wpm típico

  palavras prioritárias
  › através  7% → 25%  falhou 3/12 · corrigiu 2/


  ──────────────────────────────────────────────
  ↑↓ mover  enter detalhes  R zerar  esc voltar
