src/snapshots/tuipe__ui__tests__statistics_95x28.snap
---
source: src/ui.rs
expression: "render_statistics_at(95, 28)"
---
    estatísticas                                                         nível 0  ·  0 dias
    ╭──────────────────────────╮ ╭───────────────────────────╮ ╭──────────────────────────╮
    │      1  visão geral     │ │       2  progresso       │ │       3  histórico      │
    ╰──────────────────────────╯ ╰───────────────────────────╯ ╰──────────────────────────╯

    tendência de wpm  ·  12 testes válidos
     100│
        │                                     ⡀      ⢀       ⡀      ⢀   ⢀⣀⣀⣠⣀⣀⣀⣀⣀⣀⣀⣄⣀⣀⣀⣀⣀⣀⣠
        │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠓⠒⠒⠒⠒⠒⠒⠓⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠁
        │
      50│
        │
        │
        │
       0└──────────────────────────────────────────────────────────────────────────────────
        #1             #3              #5               #7              #9              #12
    testes totais  testes válido  wpm médio      precisão      melhor         tempo ativo
    42             12             84             96%           112            1h 01m

    palavras prioritárias                             padrões que pedem treino
    palavra      aumento  falha  correção  exposições tipo/padrão       falha  palavras
    ›através        ≈18%    30%    20%     10         técnica acento …    21% 5 palavras




    ───────────────────────────────────────────────────────────────────────────────────────
    ↑↓ selecionar   enter detalhes   R zerar modelo   esc voltar
